# llvm_proof

./: README.md  genPy.py  gen_py_old  llvm_proof.py  tmp.ll
compiler/: CMakeLists.txt  Emitter.cc  Emitter.hh  PyEmitter.cc  PyEmitter.hh  PyLLVMEmitter.cc  PyLLVMEmitter.hh  compile.sh  gen_py  main.cc  path.c  path.ll  route_segment.ll  tmp.ll
elina/: __init__.py  elina_abstract0.py  elina_abstract0_h.py  elina_auxiliary_imports.py  elina_coeff.py  elina_coeff_h.py  elina_dimension.py  elina_dimension_h.py  elina_interval.py  elina_interval_h.py  elina_lincons0.py  elina_lincons0_h.py  elina_linexpr0.py  elina_linexpr0_h.py  elina_manager.py  elina_manager_h.py  elina_scalar.py  elina_scalar_h.py  elina_tcons.py  elina_tcons0_h.py  elina_texpr0.py  elina_texpr0_h.py  opt_oct.py  opt_oct_imports.py
elina/tests/: elina_oct_test.py
example/: .path.c.swp  demo.c  demo.ll  example.c  path.c  path.ll  path.opt  simple_a.c  simple_b.c  simple_c.c
prover/: __init__.py  cfg.py  check.py  module.py  ops.py  state.py
